[gd_scene load_steps=12 format=3 uid="uid://df6re1eivhlr3"]

[ext_resource type="Texture2D" uid="uid://c4vejyes7nv50" path="res://addons/assets/Tiny Swords/UI/Ribbons/Ribbon_Red_3Slides.png" id="1_ji2e7"]
[ext_resource type="Script" path="res://scripts/behaviors/game_over_ui.gd" id="1_k71d6"]
[ext_resource type="Texture2D" uid="uid://clc00kugu5fky" path="res://addons/assets/Tiny Swords/UI/Banners/Banner_Horizontal.png" id="2_b6isu"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_w5k6d"]
texture = ExtResource("1_ji2e7")
texture_margin_left = 64.0
texture_margin_right = 64.0
axis_stretch_horizontal = 2
region_rect = Rect2(0, 0, 192, 64)

[sub_resource type="LabelSettings" id="LabelSettings_i4p4o"]
font_size = 54
outline_size = 22
outline_color = Color(0.0862745, 0.109804, 0.180392, 1)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_4l8yk"]
texture = ExtResource("2_b6isu")
texture_margin_left = 32.0
texture_margin_top = 16.0
texture_margin_right = 32.0
texture_margin_bottom = 48.0
axis_stretch_horizontal = 2
axis_stretch_vertical = 2
region_rect = Rect2(32, 48, 128, 128)

[sub_resource type="SystemFont" id="SystemFont_pf614"]
font_names = PackedStringArray("Lato")
font_weight = 600
subpixel_positioning = 0

[sub_resource type="LabelSettings" id="LabelSettings_jqocv"]
font = SubResource("SystemFont_pf614")
font_size = 24
font_color = Color(0, 0, 0, 1)

[sub_resource type="Animation" id="Animation_2onv3"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Background:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0, 0, 0, 0.694118)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("TopPanel:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(316.5, 27)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("BottomPanel:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(378, 472)]
}

[sub_resource type="Animation" id="Animation_oy1dr"]
resource_name = "default"
length = 1.8
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Background:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1.8),
"transitions": PackedFloat32Array(1, 0.225313),
"update": 0,
"values": [Color(0, 0, 0, 0), Color(0, 0, 0, 0.803922)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("TopPanel:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(0.5, 1.41421),
"update": 0,
"values": [Vector2(316.5, -155), Vector2(316.5, 27)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("BottomPanel:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.4, 1.8),
"transitions": PackedFloat32Array(0.5, 1.93187),
"update": 0,
"values": [Vector2(378, 672), Vector2(378, 472)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_7kiqp"]
_data = {
"RESET": SubResource("Animation_2onv3"),
"default": SubResource("Animation_oy1dr")
}

[node name="GameOverUI" type="CanvasLayer"]
script = ExtResource("1_k71d6")
restar_delay = 7.0

[node name="Background" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.694118)

[node name="TopPanel" type="Panel" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = 316.5
offset_top = 27.0
offset_right = 835.5
offset_bottom = 154.0
grow_horizontal = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_w5k6d")

[node name="GameOver Label" type="Label" parent="TopPanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -92.5
offset_top = -38.5
offset_right = 90.5
offset_bottom = 6.5
grow_horizontal = 2
grow_vertical = 2
text = "GAME OVER"
label_settings = SubResource("LabelSettings_i4p4o")

[node name="BottomPanel" type="Panel" parent="."]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = 378.0
offset_top = 472.0
offset_right = 775.0
offset_bottom = 605.0
grow_horizontal = 2
grow_vertical = 0
theme_override_styles/panel = SubResource("StyleBoxTexture_4l8yk")

[node name="CenterContainer" type="CenterContainer" parent="BottomPanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -147.5
offset_top = -47.5
offset_right = 147.5
offset_bottom = 16.5
grow_horizontal = 2
grow_vertical = 2

[node name="GridContainer" type="GridContainer" parent="BottomPanel/CenterContainer"]
layout_mode = 2
theme_override_constants/h_separation = 25
theme_override_constants/v_separation = 8
columns = 2

[node name="TimeSurvivedLabel" type="Label" parent="BottomPanel/CenterContainer/GridContainer"]
layout_mode = 2
text = "Time Survived : "
label_settings = SubResource("LabelSettings_jqocv")

[node name="TimeLabel" type="Label" parent="BottomPanel/CenterContainer/GridContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "00:00"
label_settings = SubResource("LabelSettings_jqocv")

[node name="MonstersDefeatedLabel" type="Label" parent="BottomPanel/CenterContainer/GridContainer"]
layout_mode = 2
text = "Monsters Defeated : "
label_settings = SubResource("LabelSettings_jqocv")

[node name="NumberLabel" type="Label" parent="BottomPanel/CenterContainer/GridContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "0000
"
label_settings = SubResource("LabelSettings_jqocv")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_7kiqp")
}
autoplay = "default"
